style.css
* {
    font-family:
        Fragment Mono,
        monospace;
}

html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
}

.desk {
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url("https://raiz1.noho.st/gotthard/.personal/kevadesu/assets/kevadesu-wallpaper.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    text-align: center;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    flex-wrap: wrap;
    gap: 2rem;
}

.window {
    background-color: rgba(255, 255, 255, 0.849);
    padding: 1rem;
    text-align: left;
    backdrop-filter: blur(8px) saturate(180%);
    -webkit-backdrop-filter: blur(16px) saturate(180%);
    min-width: 20%;
    max-width: 1150px;
    max-height: 90%;
    overflow: auto;
    box-sizing: border-box;
    width: clamp(300px, 40%, 600px);
}

button,
.button {
    background-color: black;
    color: white;
    padding: 5px;
    margin-bottom: 10px;
    margin-right: 1px;
    border: none;
    text-decoration: none;
    display: inline-block;
}

button:hover,
.button:hover {
    background-color: lightslategrey;
    text-decoration: underline dotted;
    cursor: pointer;
}

code,
.codeblock {
    background-color: black;
    color: white;
    padding: 1%;
    margin-top: 15px;
    margin-bottom: 10px;
    border-radius: 5px;
    border: solid darkslategrey 3px;
    overflow-x: auto;
    line-height: 1.5;
    white-space: pre;
}

code:hover,
.codeblock:hover {
    background-color: rgba(50, 50, 50, 0.9);
    /* Slightly lighter on hover */
    border-color: lightslategrey;
    /* Highlight the border */
}

